Now using typealiases for Array<IntArray> -> IntMatrix and Pair<Int, Int> -> Coordinate

--- a/generator/src/main/resources/plugin.yml
+++ b/generator/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: @pl.name@
-main: @pl.group@.Main
+main: @pl.group@.RectBacktrackerGenerator
 version: @pl.version@
 authors: [@pl.authors@]
 load: STARTUP
