Updated build.gradle for multi-module

--- a/generator/src/main/resources/plugin.yml
+++ b/generator/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: @pl.name@
-main: @pl.group@.RectBacktrackerGenerator
+main: @pl.group@.Main
 version: @pl.version@
 authors: [@pl.authors@]
 load: STARTUP
