--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = '1.2.60'
-
-        timestamp = { ->
-            return new Date().format("yyyy-MM-dd'T'HH:mm:ssZ", TimeZone.getDefault())
-        }
+        kotlinVersion = '1.3.40'
     }
 
     repositories {
@@ -12,20 +8,12 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath group: 'org.jetbrains.kotlin', name: 'kotlin-gradle-plugin', version: kotlinVersion
     }
-}
-
-plugins {
-    id "com.github.johnrengelman.shadow" version "2.0.2"
-    id "org.ajoberstar.grgit" version "1.7.2"
 }
 
 allprojects {
     apply plugin: 'kotlin'
-
-    apply plugin: 'com.github.johnrengelman.shadow'
-    apply plugin: 'org.ajoberstar.grgit'
 
     compileKotlin {
         kotlinOptions {
@@ -34,16 +22,11 @@ allprojects {
         }
     }
 
-    shadowJar {
-        classifier = null
-        version = null
+    repositories {
+        mavenCentral()
     }
 
-    repositories {
-        jcenter()
-        mavenLocal()
-
-        maven { url "https://repo.viaversion.com/" }
-        maven { url "https://jitpack.io/" }
+    dependencies {
+        compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlinVersion
     }
 }
